--- a/app/components/product/details.hbs
+++ b/app/components/product/details.hbs
@@ -3,7 +3,7 @@
   {{!-- Header --}}
 
   <section>
-    <h3>Beats Solo Wireless Headphones</h3>
+    <h3>{{@name}}</h3>
     <div class="text-warning">
       <i class="fa fa-star"></i>
       <i class="fa fa-star"></i>
@@ -16,15 +16,17 @@
   {{!-- Price --}}
 
   <section>
-    <del class="small text-black-50">R$ 199,95</del>
-    <i class="text-danger font-weight-bold">R$ 99,98</i>
+    <del class="small text-black-50">R$ {{@price.original}}</del>
+    <i class="text-danger font-weight-bold">R$ {{@price.current}}</i>
   </section>
 
   <div>
     <h5>Cor</h5>
     <div class="product-colors active-{{@color}}">
-      <span class="product-color color-red" {{on "click" (fn @onChangeColor "red" )}}></span>
-      <span class="product-color color-black" {{on "click" (fn @onChangeColor "black" )}}></span>
+      {{#each @colors as |colorInfo|}}
+      <span class="product-color {{concat 'color-' colorInfo.color}}" {{on "click" (fn @onChangeColor colorInfo.color
+        )}}></span>
+      {{/each}}
     </div>
   </div>
 </div>
