adding some helpers

--- a/app/components/product/details.hbs
+++ b/app/components/product/details.hbs
@@ -15,11 +15,12 @@
 
   {{!-- Price --}}
 
-  <section>
-    <del class="small text-black-50">R$ {{@price.original}}</del>
-    <i class="text-danger font-weight-bold">R$ {{@price.current}}</i>
+  <section class={{unless @isDetails 'h4' }}>
+    <del class="small text-black-50">{{currency @price.original}}</del>
+    <i class="text-danger font-weight-bold">{{currency @price.current}}</i>
   </section>
 
+  {{#if @isDetails}}
   <div>
     <h5>Cor</h5>
     <div class="product-colors active-{{@color}}">
@@ -29,4 +30,5 @@
       {{/each}}
     </div>
   </div>
+  {{/if}}
 </div>
