--- a/app/templates/cart.hbs
+++ b/app/templates/cart.hbs
@@ -12,15 +12,15 @@
   <section class="w-50 ml-auto text-right mb-5">
     <div class="row">
       <span class="col">Subtotal</span>
-      <span class="col">{{this.subtotal}}</span>
+      <span class="col">{{currency this.subtotal}}</span>
     </div>
     <div class="row">
       <span class="col">Desconto</span>
-      <span class="col">{{this.desconto}}</span>
+      <span class="col">{{currency this.desconto}}</span>
     </div>
     <div class="row">
       <span class="col">Total</span>
-      <span class="col">{{this.total}}</span>
+      <span class="col">{{currency this.total}}</span>
     </div>
   </section>
 
