--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -1,8 +1,8 @@
 <GeneralContainer>
-  <div class="product item-details-page">
-    <Product::Image @src={{this.productImage}} />
-    <Product::Details @name={{this.model.name}} @price={{this.model.price}} @colors={{this.model.colors}}
-      @color={{this.color}} @onChangeColor={{this.onChangeColor}} />
+  <div class="product item-details-page {{if this.isZoomed 'is-zoomed'}}">
+    <Product::Image @src={{this.productImage}} @toggleZoom={{this.toggleZoom}} />
+    <Product::Details @isDetails={{true}} @name={{this.model.name}} @price={{this.model.price}}
+      @colors={{this.model.colors}} @color={{this.color}} @onChangeColor={{this.onChangeColor}} />
   </div>
   <h5 class="mt-5">Features</h5>
   <ul>
