--- a/app/components/product/details.hbs
+++ b/app/components/product/details.hbs
@@ -16,8 +16,8 @@
   {{!-- Price --}}
 
   <section class={{unless @isDetails 'h4' }}>
-    <del class="small text-black-50">{{currency @price.original}}</del>
-    <i class="text-danger font-weight-bold">{{currency @price.current}}</i>
+    <del data-test-original-price class="small text-black-50">{{currency @price.original}}</del>
+    <i data-test-current-price class="text-danger font-weight-bold">{{currency @price.current}}</i>
   </section>
 
   {{#if @isDetails}}
@@ -26,12 +26,12 @@
       <h5>Cor</h5>
       <div class="product-colors active-{{@color}}">
         {{#each @colors as |colorInfo|}}
-        <span class="product-color {{concat 'color-' colorInfo.color}}" {{on "click" (fn @onChangeColor colorInfo.color
-          )}}></span>
+        <span data-test-color class="product-color {{concat 'color-' colorInfo.color}}" {{on "click" (fn @onChangeColor
+          colorInfo.color )}}></span>
         {{/each}}
       </div>
     </div>
-    <button class="btn btn-info" type="button" {{on "click" this.addToCart}}>
+    <button data-test-add-to-cart class="btn btn-info" type="button" {{on "click" this.addToCart}}>
       <i class="fa fa-shopping-cart mr-1"></i>
       Comprar agora
     </button>
