--- a/app/components/general-container.hbs
+++ b/app/components/general-container.hbs
@@ -1,12 +1,10 @@
 <LinkTo @route="cart" class="cart-link">
   <i class="fa fa-shopping-cart"></i>
-  {{#if this.cart.itemList.length}}
-
-  <span class="cart-count d-inline-flex justify-content-center align-items-center">
+  {{#if this.shoppingCart.itemList.length}}
+  <span data-test-cart-count class="cart-count d-inline-flex justify-content-center align-items-center">
     {{this.itemCount}}
   </span>
   {{/if}}
-
 </LinkTo>
 
 <main class="container mt-5">
