--- a/app/components/product.hbs
+++ b/app/components/product.hbs
@@ -1,4 +1,4 @@
-<LinkTo @route="item" @model={{@product.id}} class="product">
+<LinkTo data-test-product={{@product.id}} @route="item" @model={{@product.id}} class="product">
   <Product::Image @src={{this.productImage}} />
   <Product::Details @name={{@product.name}} @price={{@product.price}} />
 </LinkTo>
